--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -5,14 +5,16 @@
     android:orientation="horizontal">
 
     <ImageView
+        android:adjustViewBounds="true"
         android:id="@+id/id_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin" />
 
     <ImageView
+        android:adjustViewBounds="true"
         android:id="@+id/content"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin" />
 </LinearLayout>
